       mode.
     - Fixed crash in SliderVertical when trying to set value if max and min
       values are the same (Quirky).
     - Fixed crash in SliderHorizontal when trying to set value if max and min
       values are the same.
     - Fixed FileRequester crash when path has trailing slash (Quirky).
     - Fixed double-click in SDL (Quirky).

  V0.37 (20090112)
  
  - Fixes:
     - ListBox::setAllowMultipleSelections() works correctly.
     - Replaced byte and short iterator variables with ints.
     - Compatible with devKitPro v24 and libnds 1.3.1.
     - Renamed "DynamicArray" to "WoopsiArray" for compatibility with dkp24.
     - Made libnds makefile the default instead of PALib.

  V0.36 (20081104)
  
  - Fixes:
     - s32 used as iterator when working with visible rect cache to prevent
       permanent loops when large numbers of rects were visible.
     - s32 used as child gadget iterator.
     - MultiLineTextBox::resize() correctly recalculates the number of visible
       rows.
     - Tidied up MultiLineTextBox::getRowX() and getRowY().
     - MultiLineTextBox::getCurrentPage() no longer divides by 0 if there are no
       visible rows.
     - MultiLineTextBox::draw() tidied up; correctly draws when partial line of
       text is visible.
     - MultiLineTextBox vertical alignment options all work correctly.
     - MultiLineTextBox scrolls correctly when text is added.
     - MultiLineTextBox has cursor support.
     - Text::stripTopLines() was not removing all characters.
     - Deleted empty fontbase.cpp file.
     - Removed unused "bitmap.h" include from "skin.h".

  - New Features:
     - Moved all classes into WoopsiUI namespace.
     - Added Date class.
     - Added Calendar gadget.
     - Added Calendar example.
     - Added Date example.
     - Added ProgressBar example.
     - Text::wrap() only wraps lines impacted by insert/delete/append
       operations.
     - Replaced unused Bitmap struct with a Bitmap class with drawing routines.