@@ -2,7 +2,6 @@
 #include "filereqdemo.h"
 #include "woopsiheaders.h"
 #include "filerequester.h"
-#include <fat.h>
 
 using namespace WoopsiUI;
 
